--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@ a {
 }
 text {
     color:rgb(255, 255, 255);
+    
 }
 body {
     display:false;
     flex-direction: column;
     min-height: 100vh;
     color:rgb(238, 234, 0);
+    font-family:Arial, Helvetica, sans-serif;
 }
 main {
     display: flex;
